--- a/Split_Tool.ipynb
+++ b/Split_Tool.ipynb
@@ -11,65 +11,59 @@
     "from openpyxl import load_workbook\n",
     "from openpyxl.worksheet.datavalidation import DataValidation\n",
     "\n",
-    "def update_l3_l4_dropdowns(folder_path):\n",
+    "def update_l3_dropdowns(folder_path: str):\n",
     "    for file in os.listdir(folder_path):\n",
-    "        if not file.endswith(\".xlsx\") or file.startswith(\"~$\"):\n",
-    "            continue\n",
+    "        if file.endswith(\".xlsx\"):\n",
+    "            file_path = os.path.join(folder_path, file)\n",
+    "            filename = os.path.splitext(file)[0]\n",
     "\n",
-    "        filepath = os.path.join(folder_path, file)\n",
-    "        filename_key = os.path.splitext(file)[0]\n",
+    "            wb = load_workbook(file_path)\n",
+    "            if not all(sheet in wb.sheetnames for sheet in [\"Options\", \"L3 View\", \"L4 View\"]):\n",
+    "                print(f\"Skipping {file} - missing required sheets.\")\n",
+    "                continue\n",
     "\n",
-    "        wb = load_workbook(filepath)\n",
-    "        if not all(sheet in wb.sheetnames for sheet in [\"Options\", \"L3 View\", \"L4 View\"]):\n",
-    "            print(f\"Skipping {file}: required sheets missing.\")\n",
-    "            continue\n",
+    "            ws_options = wb[\"Options\"]\n",
+    "            ws_l3 = wb[\"L3 View\"]\n",
+    "            ws_l4 = wb[\"L4 View\"]\n",
     "\n",
-    "        ws_options = wb[\"Options\"]\n",
-    "        ws_l3 = wb[\"L3 View\"]\n",
-    "        ws_l4 = wb[\"L4 View\"]\n",
+    "            # Collect values from Options!J where I == filename (cols I & J => index 9 & 10)\n",
+    "            filtered_l4_values = []\n",
+    "            for row in ws_options.iter_rows(min_row=3, min_col=9, max_col=10, values_only=True):  # I:J\n",
+    "                l3_val, l4_val = row\n",
+    "                if l3_val == filename and l4_val is not None:\n",
+    "                    filtered_l4_values.append(str(l4_val).strip())\n",
     "\n",
-    "        # Build mapping from D (L3) -> E (L4)\n",
-    "        l3_l4_map = {}\n",
-    "        for row in ws_options.iter_rows(min_row=3, min_col=4, max_col=5, values_only=True):\n",
-    "            l3, l4 = row\n",
-    "            if l3:\n",
-    "                l3 = str(l3).strip()\n",
-    "                l4 = str(l4).strip() if l4 else \"\"\n",
-    "                l3_l4_map.setdefault(l3, []).append(l4)\n",
+    "            if not filtered_l4_values:\n",
+    "                print(f\"No matching L4 values found for '{filename}' in {file}\")\n",
+    "                continue\n",
     "\n",
-    "        if filename_key not in l3_l4_map:\n",
-    "            print(f\"L3 key '{filename_key}' not found in Options sheet of '{file}'\")\n",
-    "            continue\n",
+    "            # Clear Options!B3:B... before writing new dropdown list\n",
+    "            for row in ws_options.iter_rows(min_row=3, min_col=2, max_col=2):  # Column B\n",
+    "                row[0].value = None\n",
     "\n",
-    "        dropdown_values = [\"*\"] + sorted(set(l3_l4_map[filename_key]))\n",
+    "            for idx, val in enumerate(filtered_l4_values, start=3):  # B3 onwards\n",
+    "                ws_options[f\"B{idx}\"] = val\n",
     "\n",
-    "        # Clear temp area in col K & L (just in case)\n",
-    "        for row in ws_options.iter_rows(min_row=3, max_col=2, min_col=11):  # Col K (11) & L (12)\n",
-    "            row[0].value = None\n",
-    "            row[1].value = None\n",
+    "            # Set L3 View B1 = filename\n",
+    "            if ws_l3[\"B1\"].merge_cells:\n",
+    "                ws_l3.unmerge_cells(\"B1:C1\")\n",
+    "            ws_l3[\"B1\"] = filename\n",
     "\n",
-    "        # Write to col K & L in Options\n",
-    "        start_row = 3\n",
-    "        for i, val in enumerate(dropdown_values):\n",
-    "            ws_options.cell(row=start_row + i, column=11).value = filename_key  # Col K\n",
-    "            ws_options.cell(row=start_row + i, column=12).value = val          # Col L\n",
+    "            # Set dropdown in L4 View B1, pointing to Options!B2 to last value (include \"*\")\n",
+    "            if ws_l4[\"B1\"].merge_cells:\n",
+    "                ws_l4.unmerge_cells(\"B1:C1\")\n",
     "\n",
-    "        # Set dropdown in L4 View B1\n",
-    "        b1_cell = ws_l4.cell(row=1, column=2)\n",
-    "        b1_cell.value = \"*\"\n",
+    "            ws_l4.data_validations.dataValidation = []  # Clear all validations\n",
     "\n",
-    "        dv_range = f\"Options!$L${start_row}:$L${start_row + len(dropdown_values) - 1}\"\n",
-    "        dv = DataValidation(type=\"list\", formula1=f\"={dv_range}\", showDropDown=True)\n",
+    "            last_row = 2 + len(filtered_l4_values)  # B2 to B(n)\n",
+    "            formula_range = f\"=Options!$B$2:$B${last_row}\"\n",
     "\n",
-    "        ws_l4.add_data_validation(dv)\n",
-    "        dv.add(b1_cell)\n",
+    "            dv = DataValidation(type=\"list\", formula1=formula_range, showDropDown=False)\n",
+    "            ws_l4.add_data_validation(dv)\n",
+    "            dv.add(\"B1\")\n",
     "\n",
-    "        # Update L3 View B1\n",
-    "        ws_l3.cell(row=1, column=2).value = filename_key\n",
-    "\n",
-    "        wb.save(filepath)\n",
-    "        print(f\"Updated: {file} with dropdown values in Options!L3:L and B1 set.\")\n",
-    "\n"
+    "            wb.save(file_path)\n",
+    "            print(f\"✔️ Updated dropdown in {file}\")\n"
    ]
   },
   {
