--- a/Split_Tool.ipynb
+++ b/Split_Tool.ipynb
@@ -11,59 +11,69 @@
     "from openpyxl import load_workbook\n",
     "from openpyxl.worksheet.datavalidation import DataValidation\n",
     "\n",
-    "def update_l3_dropdowns(folder_path: str):\n",
+    "def update_l3_type_dropdowns(folder_path: str):\n",
     "    for file in os.listdir(folder_path):\n",
-    "        if file.endswith(\".xlsx\"):\n",
-    "            file_path = os.path.join(folder_path, file)\n",
-    "            filename = os.path.splitext(file)[0]\n",
+    "        if not file.endswith(\".xlsx\"):\n",
+    "            continue\n",
     "\n",
-    "            wb = load_workbook(file_path)\n",
-    "            if not all(sheet in wb.sheetnames for sheet in [\"Options\", \"L3 View\", \"L4 View\"]):\n",
-    "                print(f\"Skipping {file} - missing required sheets.\")\n",
-    "                continue\n",
+    "        file_path = os.path.join(folder_path, file)\n",
+    "        filename = os.path.splitext(file)[0]\n",
     "\n",
-    "            ws_options = wb[\"Options\"]\n",
-    "            ws_l3 = wb[\"L3 View\"]\n",
-    "            ws_l4 = wb[\"L4 View\"]\n",
+    "        wb = load_workbook(file_path)\n",
+    "        if not all(sheet in wb.sheetnames for sheet in [\"Options\", \"L3 View\", \"L4 View\"]):\n",
+    "            print(f\"Skipping {file} - missing required sheets.\")\n",
+    "            continue\n",
     "\n",
-    "            # Collect values from Options!J where I == filename (cols I & J => index 9 & 10)\n",
-    "            filtered_l4_values = []\n",
-    "            for row in ws_options.iter_rows(min_row=3, min_col=9, max_col=10, values_only=True):  # I:J\n",
-    "                l3_val, l4_val = row\n",
-    "                if l3_val == filename and l4_val is not None:\n",
-    "                    filtered_l4_values.append(str(l4_val).strip())\n",
+    "        ws_options = wb[\"Options\"]\n",
+    "        ws_l3 = wb[\"L3 View\"]\n",
+    "        ws_l4 = wb[\"L4 View\"]\n",
     "\n",
-    "            if not filtered_l4_values:\n",
-    "                print(f\"No matching L4 values found for '{filename}' in {file}\")\n",
-    "                continue\n",
+    "        # STEP 1: Filter rows where Options!I == filename, collect Options!J values\n",
+    "        matched_values = []\n",
+    "        for row in ws_options.iter_rows(min_row=3):\n",
+    "            file_col_val = row[8].value  # Column I\n",
+    "            dropdown_val = row[9].value  # Column J\n",
+    "            if file_col_val and str(file_col_val).strip() == filename:\n",
+    "                matched_values.append(str(dropdown_val).strip())\n",
     "\n",
-    "            # Clear Options!B3:B... before writing new dropdown list\n",
-    "            for row in ws_options.iter_rows(min_row=3, min_col=2, max_col=2):  # Column B\n",
-    "                row[0].value = None\n",
+    "        if not matched_values:\n",
+    "            print(f\"⚠️ No matching L4 values for '{filename}' in {file}\")\n",
+    "            continue\n",
     "\n",
-    "            for idx, val in enumerate(filtered_l4_values, start=3):  # B3 onwards\n",
-    "                ws_options[f\"B{idx}\"] = val\n",
+    "        # STEP 2: Clear old values from Options!B3 downward (but not B2 which has '*')\n",
+    "        for cell in ws_options[\"B\"][2:]:\n",
+    "            cell.value = None\n",
     "\n",
-    "            # Set L3 View B1 = filename\n",
-    "            if ws_l3[\"B1\"].merge_cells:\n",
-    "                ws_l3.unmerge_cells(\"B1:C1\")\n",
-    "            ws_l3[\"B1\"] = filename\n",
+    "        # STEP 3: Paste new dropdown list values to Options!B3 downward\n",
+    "        for i, val in enumerate(matched_values, start=3):\n",
+    "            ws_options[f\"B{i}\"] = val\n",
     "\n",
-    "            # Set dropdown in L4 View B1, pointing to Options!B2 to last value (include \"*\")\n",
-    "            if ws_l4[\"B1\"].merge_cells:\n",
-    "                ws_l4.unmerge_cells(\"B1:C1\")\n",
+    "        # STEP 4: Set filename in L3 View!B1 (unmerge if necessary)\n",
+    "        if ws_l3[\"B1\"].coordinate in ws_l3.merged_cells:\n",
+    "            ws_l3.unmerge_cells(\"B1:C1\")\n",
+    "        ws_l3[\"B1\"] = filename\n",
     "\n",
-    "            ws_l4.data_validations.dataValidation = []  # Clear all validations\n",
+    "        # STEP 5: Add dropdown to L4 View!B1 using Options!B2:B(n+2)\n",
+    "        if ws_l4[\"B1\"].coordinate in ws_l4.merged_cells:\n",
+    "            ws_l4.unmerge_cells(\"B1:C1\")\n",
     "\n",
-    "            last_row = 2 + len(filtered_l4_values)  # B2 to B(n)\n",
-    "            formula_range = f\"=Options!$B$2:$B${last_row}\"\n",
+    "        # Remove existing validations\n",
+    "        ws_l4.data_validations.dataValidation = []\n",
     "\n",
-    "            dv = DataValidation(type=\"list\", formula1=formula_range, showDropDown=False)\n",
-    "            ws_l4.add_data_validation(dv)\n",
-    "            dv.add(\"B1\")\n",
+    "        total_rows = len(matched_values) + 1  # +1 to include B2 (which has '*')\n",
+    "        formula_range = f\"=Options!$B$2:$B${total_rows + 1}\"\n",
     "\n",
-    "            wb.save(file_path)\n",
-    "            print(f\"✔️ Updated dropdown in {file}\")\n"
+    "        dv = DataValidation(type=\"list\", formula1=formula_range, showDropDown=False)\n",
+    "        dv.error = \"Please select a valid option.\"\n",
+    "        dv.errorTitle = \"Invalid Selection\"\n",
+    "        dv.prompt = \"Choose from dropdown.\"\n",
+    "        dv.promptTitle = \"L4 Options\"\n",
+    "\n",
+    "        ws_l4.add_data_validation(dv)\n",
+    "        dv.add(ws_l4[\"B1\"])\n",
+    "\n",
+    "        wb.save(file_path)\n",
+    "        print(f\"✅ Updated dropdown for: {file}\")\n"
    ]
   },
   {
