--- a/Split_Tool.ipynb
+++ b/Split_Tool.ipynb
@@ -28,39 +28,45 @@
     "        ws_l3 = wb[\"L3 View\"]\n",
     "        ws_l4 = wb[\"L4 View\"]\n",
     "\n",
+    "        # Create a header map for the Options sheet (row 2 is assumed header)\n",
+    "        header_row = {cell.value: cell.column_letter for cell in ws_options[2]}\n",
+    "\n",
+    "        col_file_key = header_row.get(\"File Name\") or \"I\"\n",
+    "        col_dropdown_val = header_row.get(\"Displayed Value\") or \"J\"\n",
+    "\n",
     "        # STEP 1: Filter rows where Options!I == filename, collect Options!J values\n",
     "        matched_values = []\n",
-    "        for row in ws_options.iter_rows(min_row=3):\n",
-    "            file_col_val = row[8].value  # Column I\n",
-    "            dropdown_val = row[9].value  # Column J\n",
-    "            if file_col_val and str(file_col_val).strip() == filename:\n",
-    "                matched_values.append(str(dropdown_val).strip())\n",
+    "        for row in ws_options.iter_rows(min_row=3, max_row=ws_options.max_row):\n",
+    "            key_cell = row[ord(col_file_key) - ord('A')]\n",
+    "            val_cell = row[ord(col_dropdown_val) - ord('A')]\n",
+    "\n",
+    "            if key_cell.value and str(key_cell.value).strip() == filename:\n",
+    "                matched_values.append(str(val_cell.value).strip())\n",
     "\n",
     "        if not matched_values:\n",
     "            print(f\"⚠️ No matching L4 values for '{filename}' in {file}\")\n",
     "            continue\n",
     "\n",
-    "        # STEP 2: Clear old values from Options!B3 downward (but not B2 which has '*')\n",
+    "        # STEP 2: Clear Options!B3:B (not B2 which contains '*')\n",
     "        for cell in ws_options[\"B\"][2:]:\n",
     "            cell.value = None\n",
     "\n",
-    "        # STEP 3: Paste new dropdown list values to Options!B3 downward\n",
+    "        # STEP 3: Paste matched values into Options!B3 onward\n",
     "        for i, val in enumerate(matched_values, start=3):\n",
     "            ws_options[f\"B{i}\"] = val\n",
     "\n",
-    "        # STEP 4: Set filename in L3 View!B1 (unmerge if necessary)\n",
+    "        # STEP 4: Set L3 View!B1 = filename (unmerge if necessary)\n",
     "        if ws_l3[\"B1\"].coordinate in ws_l3.merged_cells:\n",
     "            ws_l3.unmerge_cells(\"B1:C1\")\n",
     "        ws_l3[\"B1\"] = filename\n",
     "\n",
-    "        # STEP 5: Add dropdown to L4 View!B1 using Options!B2:B(n+2)\n",
+    "        # STEP 5: Add dropdown to L4 View!B1 using Options!B2:B(n)\n",
     "        if ws_l4[\"B1\"].coordinate in ws_l4.merged_cells:\n",
     "            ws_l4.unmerge_cells(\"B1:C1\")\n",
     "\n",
-    "        # Remove existing validations\n",
-    "        ws_l4.data_validations.dataValidation = []\n",
+    "        ws_l4.data_validations.dataValidation.clear()  # Clear old validations\n",
     "\n",
-    "        total_rows = len(matched_values) + 1  # +1 to include B2 (which has '*')\n",
+    "        total_rows = len(matched_values) + 1  # B2 to B(n)\n",
     "        formula_range = f\"=Options!$B$2:$B${total_rows + 1}\"\n",
     "\n",
     "        dv = DataValidation(type=\"list\", formula1=formula_range, showDropDown=False)\n",
@@ -73,7 +79,7 @@
     "        dv.add(ws_l4[\"B1\"])\n",
     "\n",
     "        wb.save(file_path)\n",
-    "        print(f\"✅ Updated dropdown for: {file}\")\n"
+    "        print(f\"✅ Dropdown updated for: {file}\")\n"
    ]
   },
   {
