--- a/Split_Tool.ipynb
+++ b/Split_Tool.ipynb
@@ -28,52 +28,49 @@
     "        ws_l3 = wb[\"L3 View\"]\n",
     "        ws_l4 = wb[\"L4 View\"]\n",
     "\n",
-    "        # Create a header map for the Options sheet (row 2 is assumed header)\n",
-    "        header_row = {cell.value: cell.column_letter for cell in ws_options[2]}\n",
+    "        # Get header map (row 1)\n",
+    "        header_map = {cell.value: cell.column_letter for cell in ws_options[1]}\n",
     "\n",
-    "        col_file_key = header_row.get(\"File Name\") or \"I\"\n",
-    "        col_dropdown_val = header_row.get(\"Displayed Value\") or \"J\"\n",
+    "        col_l3 = header_map.get(\"Business Framework Group\", \"D\")\n",
+    "        col_l4 = header_map.get(\"Business Framework\", \"E\")\n",
     "\n",
-    "        # STEP 1: Filter rows where Options!I == filename, collect Options!J values\n",
     "        matched_values = []\n",
-    "        for row in ws_options.iter_rows(min_row=3, max_row=ws_options.max_row):\n",
-    "            key_cell = row[ord(col_file_key) - ord('A')]\n",
-    "            val_cell = row[ord(col_dropdown_val) - ord('A')]\n",
+    "        for row in ws_options.iter_rows(min_row=2, max_row=ws_options.max_row):\n",
+    "            l3_cell = row[ord(col_l3) - ord('A')]\n",
+    "            l4_cell = row[ord(col_l4) - ord('A')]\n",
     "\n",
-    "            if key_cell.value and str(key_cell.value).strip() == filename:\n",
-    "                matched_values.append(str(val_cell.value).strip())\n",
+    "            if l3_cell.value and str(l3_cell.value).strip() == filename:\n",
+    "                matched_values.append(str(l4_cell.value).strip())\n",
     "\n",
     "        if not matched_values:\n",
     "            print(f\"⚠️ No matching L4 values for '{filename}' in {file}\")\n",
     "            continue\n",
     "\n",
-    "        # STEP 2: Clear Options!B3:B (not B2 which contains '*')\n",
+    "        # Clear Options!B3:B\n",
     "        for cell in ws_options[\"B\"][2:]:\n",
     "            cell.value = None\n",
     "\n",
-    "        # STEP 3: Paste matched values into Options!B3 onward\n",
+    "        # Paste matched values into Options!B3 onwards\n",
     "        for i, val in enumerate(matched_values, start=3):\n",
     "            ws_options[f\"B{i}\"] = val\n",
     "\n",
-    "        # STEP 4: Set L3 View!B1 = filename (unmerge if necessary)\n",
+    "        # Update L3 View!B1 with filename\n",
     "        if ws_l3[\"B1\"].coordinate in ws_l3.merged_cells:\n",
     "            ws_l3.unmerge_cells(\"B1:C1\")\n",
     "        ws_l3[\"B1\"] = filename\n",
     "\n",
-    "        # STEP 5: Add dropdown to L4 View!B1 using Options!B2:B(n)\n",
+    "        # Add dropdown in L4 View!B1\n",
     "        if ws_l4[\"B1\"].coordinate in ws_l4.merged_cells:\n",
     "            ws_l4.unmerge_cells(\"B1:C1\")\n",
     "\n",
-    "        ws_l4.data_validations.dataValidation.clear()  # Clear old validations\n",
+    "        ws_l4.data_validations.dataValidation.clear()\n",
     "\n",
-    "        total_rows = len(matched_values) + 1  # B2 to B(n)\n",
+    "        total_rows = len(matched_values) + 1  # Include the existing '*' in B2\n",
     "        formula_range = f\"=Options!$B$2:$B${total_rows + 1}\"\n",
     "\n",
     "        dv = DataValidation(type=\"list\", formula1=formula_range, showDropDown=False)\n",
-    "        dv.error = \"Please select a valid option.\"\n",
-    "        dv.errorTitle = \"Invalid Selection\"\n",
-    "        dv.prompt = \"Choose from dropdown.\"\n",
-    "        dv.promptTitle = \"L4 Options\"\n",
+    "        dv.error = \"Invalid selection.\"\n",
+    "        dv.prompt = \"Choose from dropdown\"\n",
     "\n",
     "        ws_l4.add_data_validation(dv)\n",
     "        dv.add(ws_l4[\"B1\"])\n",
