--- a/Split_Tool.ipynb
+++ b/Split_Tool.ipynb
@@ -3,6 +3,98 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "1fd8045b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "from openpyxl import load_workbook\n",
+    "from openpyxl.worksheet.datavalidation import DataValidation\n",
+    "\n",
+    "def update_l3_type_dropdowns(folder_path: str):\n",
+    "    for file in os.listdir(folder_path):\n",
+    "        if not file.endswith(\".xlsx\"):\n",
+    "            continue\n",
+    "\n",
+    "        file_path = os.path.join(folder_path, file)\n",
+    "        filename = os.path.splitext(file)[0]\n",
+    "\n",
+    "        wb = load_workbook(file_path)\n",
+    "        if not all(sheet in wb.sheetnames for sheet in [\"Options\", \"L3 View\", \"L4 View\"]):\n",
+    "            print(f\"Skipping {file} - missing required sheets.\")\n",
+    "            continue\n",
+    "\n",
+    "        ws_options = wb[\"Options\"]\n",
+    "        ws_l3 = wb[\"L3 View\"]\n",
+    "        ws_l4 = wb[\"L4 View\"]\n",
+    "\n",
+    "        # Get header map (row 1)\n",
+    "        header_map = {cell.value: cell.column_letter for cell in ws_options[1]}\n",
+    "\n",
+    "        col_l3 = header_map.get(\"Business Framework Group\", \"D\")\n",
+    "        col_l4 = header_map.get(\"Business Framework\", \"E\")\n",
+    "\n",
+    "        if not col_l3 or not col_l4:\n",
+    "            print(f\"⚠️ Could not find required headers in 'Options' sheet of {file}\")\n",
+    "            continue\n",
+    "\n",
+    "        # Collect matched L4 values\n",
+    "        matched_values = []\n",
+    "        for row in ws_options.iter_rows(min_row=2, max_row=ws_options.max_row):\n",
+    "            l3_val = row[ord(col_l3) - ord('A')].value\n",
+    "            l4_val = row[ord(col_l4) - ord('A')].value\n",
+    "\n",
+    "            if l3_val and str(l3_val).strip() == filename:\n",
+    "                matched_values.append(str(l4_val).strip())\n",
+    "\n",
+    "        if not matched_values:\n",
+    "            print(f\"⚠️ No matching L4 values for '{filename}' in {file}\")\n",
+    "            continue\n",
+    "\n",
+    "        # Clear old values in Options!B3 onwards\n",
+    "        for cell in ws_options[\"B\"][2:]:\n",
+    "            cell.value = None\n",
+    "\n",
+    "        # Paste new values into Options!B3 onward (keeping B2 for '*')\n",
+    "        for i, val in enumerate(matched_values, start=3):\n",
+    "            ws_options[f\"B{i}\"] = val\n",
+    "\n",
+    "        # Update L3 View B1 with filename (merge B1:C1 if needed)\n",
+    "        try:\n",
+    "            ws_l3.unmerge_cells(\"B1:C1\")\n",
+    "        except:\n",
+    "            pass\n",
+    "        ws_l3.merge_cells(\"B1:C1\")\n",
+    "        ws_l3[\"B1\"] = filename\n",
+    "\n",
+    "        # Prepare L4 View B1:C1 merged cell\n",
+    "        try:\n",
+    "            ws_l4.unmerge_cells(\"B1:C1\")\n",
+    "        except:\n",
+    "            pass\n",
+    "        ws_l4.merge_cells(\"B1:C1\")\n",
+    "\n",
+    "        # Clear existing validations\n",
+    "        ws_l4.data_validations.dataValidation.clear()\n",
+    "\n",
+    "        # Add dropdown (include B2 where '*' is already present)\n",
+    "        total_rows = len(matched_values) + 1\n",
+    "        formula_range = f\"=Options!$B$2:$B${total_rows + 1}\"\n",
+    "\n",
+    "        dv = DataValidation(type=\"list\", formula1=formula_range, showDropDown=False)\n",
+    "        dv.error = \"Invalid selection.\"\n",
+    "        dv.prompt = \"Choose from dropdown\"\n",
+    "\n",
+    "        ws_l4.add_data_validation(dv)\n",
+    "        dv.add(ws_l4[\"B1\"])  # Only top-left of merged cell\n",
+    "\n",
+    "        wb.save(file_path)\n",
+    "        print(f\"✅ Dropdown updated for: {file}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "989e462c",
    "metadata": {},
    "outputs": [],
