--- a/Split_Tool.ipynb
+++ b/Split_Tool.ipynb
@@ -3,7 +3,134 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1fd8045b",
+   "id": "344e52e1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "from openpyxl import load_workbook\n",
+    "from openpyxl.worksheet.datavalidation import DataValidation\n",
+    "\n",
+    "def update_l3_split_dropdown(file_path: str, filename: str, ws_options, ws_l3, ws_l4):\n",
+    "    header_map = {cell.value: cell.column_letter for cell in ws_options[1]}\n",
+    "    col_l3 = header_map.get(\"Business Framework Group\", \"D\")\n",
+    "    col_l4 = header_map.get(\"Business Framework\", \"E\")\n",
+    "\n",
+    "    matched_values = []\n",
+    "    for row in ws_options.iter_rows(min_row=2, max_row=ws_options.max_row):\n",
+    "        l3_val = row[ord(col_l3) - ord('A')].value\n",
+    "        l4_val = row[ord(col_l4) - ord('A')].value\n",
+    "        if l3_val and str(l3_val).strip() == filename:\n",
+    "            matched_values.append(str(l4_val).strip())\n",
+    "\n",
+    "    if matched_values:\n",
+    "        # Clear Options!B3 onwards\n",
+    "        for cell in ws_options[\"B\"][2:]:\n",
+    "            cell.value = None\n",
+    "        for i, val in enumerate(matched_values, start=3):\n",
+    "            ws_options[f\"B{i}\"] = val\n",
+    "\n",
+    "        # Update L3 View!B1 with filename\n",
+    "        if ws_l3[\"B1\"].coordinate in ws_l3.merged_cells:\n",
+    "            ws_l3.unmerge_cells(\"B1:C1\")\n",
+    "        ws_l3.merge_cells(\"B1:C1\")\n",
+    "        ws_l3[\"B1\"] = filename\n",
+    "\n",
+    "        # Add dropdown in L4 View!B1\n",
+    "        if ws_l4[\"B1\"].coordinate in ws_l4.merged_cells:\n",
+    "            ws_l4.unmerge_cells(\"B1:C1\")\n",
+    "        ws_l4.merge_cells(\"B1:C1\")\n",
+    "        ws_l4.data_validations.dataValidation.clear()\n",
+    "\n",
+    "        formula_range = f\"=Options!$B$2:$B${len(matched_values)+2}\"\n",
+    "        dv = DataValidation(type=\"list\", formula1=formula_range, showDropDown=False)\n",
+    "        dv.error = \"Invalid selection.\"\n",
+    "        dv.prompt = \"Choose from dropdown\"\n",
+    "        ws_l4.add_data_validation(dv)\n",
+    "        dv.add(ws_l4[\"B1\"])\n",
+    "\n",
+    "        print(f\"✅ L3 dropdown updated for: {file_path}\")\n",
+    "    else:\n",
+    "        print(f\"⚠️ No matching L4 values for '{filename}' in {file_path} [L3 Split]\")\n",
+    "\n",
+    "\n",
+    "def update_region_split_dropdown(file_path: str, filename: str, ws_options, ws_region, ws_country):\n",
+    "    header_map = {cell.value: cell.column_letter for cell in ws_options[1]}\n",
+    "    col_region = header_map.get(\"Region\", \"I\")\n",
+    "    col_country = header_map.get(\"Country\", \"J\")\n",
+    "\n",
+    "    matched_countries = []\n",
+    "    for row in ws_options.iter_rows(min_row=2, max_row=ws_options.max_row):\n",
+    "        region_val = row[ord(col_region) - ord('A')].value\n",
+    "        country_val = row[ord(col_country) - ord('A')].value\n",
+    "        if region_val and str(region_val).strip() == filename:\n",
+    "            matched_countries.append(str(country_val).strip())\n",
+    "\n",
+    "    if matched_countries:\n",
+    "        # Clear Options!H3 onwards\n",
+    "        for cell in ws_options[\"H\"][2:]:\n",
+    "            cell.value = None\n",
+    "        for i, val in enumerate(matched_countries, start=3):\n",
+    "            ws_options[f\"H{i}\"] = val\n",
+    "\n",
+    "        # Update Region View!B1 with filename\n",
+    "        if ws_region[\"B1\"].coordinate in ws_region.merged_cells:\n",
+    "            ws_region.unmerge_cells(\"B1:C1\")\n",
+    "        ws_region.merge_cells(\"B1:C1\")\n",
+    "        ws_region[\"B1\"] = filename\n",
+    "\n",
+    "        # Add dropdown in Country View!B1 (merged)\n",
+    "        if ws_country[\"B1\"].coordinate in ws_country.merged_cells:\n",
+    "            ws_country.unmerge_cells(\"B1:C1\")\n",
+    "        ws_country.merge_cells(\"B1:C1\")\n",
+    "        ws_country.data_validations.dataValidation.clear()\n",
+    "\n",
+    "        formula_range = f\"=Options!$H$2:$H${len(matched_countries)+2}\"\n",
+    "        dv = DataValidation(type=\"list\", formula1=formula_range, showDropDown=False)\n",
+    "        dv.error = \"Invalid selection.\"\n",
+    "        dv.prompt = \"Choose from dropdown\"\n",
+    "        ws_country.add_data_validation(dv)\n",
+    "        dv.add(ws_country[\"B1\"])\n",
+    "\n",
+    "        print(f\"✅ Region dropdown updated for: {file_path}\")\n",
+    "    else:\n",
+    "        print(f\"⚠️ No matching country values for '{filename}' in {file_path} [Region Split]\")\n",
+    "\n",
+    "\n",
+    "def update_dropdowns_for_folder(folder_path: str):\n",
+    "    for file in os.listdir(folder_path):\n",
+    "        if not file.endswith(\".xlsx\"):\n",
+    "            continue\n",
+    "\n",
+    "        file_path = os.path.join(folder_path, file)\n",
+    "        filename = os.path.splitext(file)[0]\n",
+    "\n",
+    "        wb = load_workbook(file_path)\n",
+    "        if \"Options\" not in wb.sheetnames:\n",
+    "            print(f\"Skipping {file} - 'Options' sheet missing.\")\n",
+    "            continue\n",
+    "\n",
+    "        ws_options = wb[\"Options\"]\n",
+    "\n",
+    "        # Handle L3 Split\n",
+    "        if all(sheet in wb.sheetnames for sheet in [\"L3 View\", \"L4 View\"]):\n",
+    "            ws_l3 = wb[\"L3 View\"]\n",
+    "            ws_l4 = wb[\"L4 View\"]\n",
+    "            update_l3_split_dropdown(file_path, filename, ws_options, ws_l3, ws_l4)\n",
+    "\n",
+    "        # Handle Region Split\n",
+    "        if all(sheet in wb.sheetnames for sheet in [\"Region View\", \"Country View\"]):\n",
+    "            ws_region = wb[\"Region View\"]\n",
+    "            ws_country = wb[\"Country View\"]\n",
+    "            update_region_split_dropdown(file_path, filename, ws_options, ws_region, ws_country)\n",
+    "\n",
+    "        wb.save(file_path)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f692dcbb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,78 +225,7 @@
    "id": "989e462c",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "import os\n",
-    "from openpyxl import load_workbook\n",
-    "from openpyxl.worksheet.datavalidation import DataValidation\n",
-    "\n",
-    "def update_l3_type_dropdowns(folder_path: str):\n",
-    "    for file in os.listdir(folder_path):\n",
-    "        if not file.endswith(\".xlsx\"):\n",
-    "            continue\n",
-    "\n",
-    "        file_path = os.path.join(folder_path, file)\n",
-    "        filename = os.path.splitext(file)[0]\n",
-    "\n",
-    "        wb = load_workbook(file_path)\n",
-    "        if not all(sheet in wb.sheetnames for sheet in [\"Options\", \"L3 View\", \"L4 View\"]):\n",
-    "            print(f\"Skipping {file} - missing required sheets.\")\n",
-    "            continue\n",
-    "\n",
-    "        ws_options = wb[\"Options\"]\n",
-    "        ws_l3 = wb[\"L3 View\"]\n",
-    "        ws_l4 = wb[\"L4 View\"]\n",
-    "\n",
-    "        # Get header map (row 1)\n",
-    "        header_map = {cell.value: cell.column_letter for cell in ws_options[1]}\n",
-    "\n",
-    "        col_l3 = header_map.get(\"Business Framework Group\", \"D\")\n",
-    "        col_l4 = header_map.get(\"Business Framework\", \"E\")\n",
-    "\n",
-    "        matched_values = []\n",
-    "        for row in ws_options.iter_rows(min_row=2, max_row=ws_options.max_row):\n",
-    "            l3_cell = row[ord(col_l3) - ord('A')]\n",
-    "            l4_cell = row[ord(col_l4) - ord('A')]\n",
-    "\n",
-    "            if l3_cell.value and str(l3_cell.value).strip() == filename:\n",
-    "                matched_values.append(str(l4_cell.value).strip())\n",
-    "\n",
-    "        if not matched_values:\n",
-    "            print(f\"⚠️ No matching L4 values for '{filename}' in {file}\")\n",
-    "            continue\n",
-    "\n",
-    "        # Clear Options!B3:B\n",
-    "        for cell in ws_options[\"B\"][2:]:\n",
-    "            cell.value = None\n",
-    "\n",
-    "        # Paste matched values into Options!B3 onwards\n",
-    "        for i, val in enumerate(matched_values, start=3):\n",
-    "            ws_options[f\"B{i}\"] = val\n",
-    "\n",
-    "        # Update L3 View!B1 with filename\n",
-    "        if ws_l3[\"B1\"].coordinate in ws_l3.merged_cells:\n",
-    "            ws_l3.unmerge_cells(\"B1:C1\")\n",
-    "        ws_l3[\"B1\"] = filename\n",
-    "\n",
-    "        # Add dropdown in L4 View!B1\n",
-    "        if ws_l4[\"B1\"].coordinate in ws_l4.merged_cells:\n",
-    "            ws_l4.unmerge_cells(\"B1:C1\")\n",
-    "\n",
-    "        ws_l4.data_validations.dataValidation.clear()\n",
-    "\n",
-    "        total_rows = len(matched_values) + 1  # Include the existing '*' in B2\n",
-    "        formula_range = f\"=Options!$B$2:$B${total_rows + 1}\"\n",
-    "\n",
-    "        dv = DataValidation(type=\"list\", formula1=formula_range, showDropDown=False)\n",
-    "        dv.error = \"Invalid selection.\"\n",
-    "        dv.prompt = \"Choose from dropdown\"\n",
-    "\n",
-    "        ws_l4.add_data_validation(dv)\n",
-    "        dv.add(ws_l4[\"B1\"])\n",
-    "\n",
-    "        wb.save(file_path)\n",
-    "        print(f\"✅ Dropdown updated for: {file}\")\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
