--- a/Split_Tool.ipynb
+++ b/Split_Tool.ipynb
@@ -3,7 +3,26 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "344e52e1",
+   "id": "217831a1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"=\"*60)\n",
+    "print(\"📌 Pre-run Checklist for the Split Tool\")\n",
+    "print(\"=\"*60)\n",
+    "print(\"1. Ensure the file you are about to split has all sheets properly visible.\")\n",
+    "print(\"2. Make sure **no dropdowns have any value selected** before proceeding.\")\n",
+    "print(\"3. Update column **M** of the 'Options' sheet with the **last date of the month**.\")\n",
+    "print(\"4. Confirm that the 'Options' sheet has **all necessary mappings** in place.\")\n",
+    "print(\"5. Check the 'Data' sheet and **remove any unwanted month-related data**.\")\n",
+    "print(\"\\n✅ Once all of the above is done, press Enter to start the tool.\")\n",
+    "input()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "423eaccd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f692dcbb",
+   "id": "02a2b855",
    "metadata": {},
    "outputs": [],
    "source": [
