--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,6 +3,102 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "4ffb0ad6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "from tkinter import Tk, filedialog\n",
+    "import sys\n",
+    "\n",
+    "# Initialize Tkinter root\n",
+    "Tk().withdraw()\n",
+    "\n",
+    "try:\n",
+    "    # --- Step 1: Load Two GHA Files ---\n",
+    "    print(\"Select the FIRST GHA file\")\n",
+    "    gha_file_1 = filedialog.askopenfilename(filetypes=[(\"Excel files\", \"*.xlsx *.xls\")])\n",
+    "    \n",
+    "    print(\"Select the SECOND GHA file\")\n",
+    "    gha_file_2 = filedialog.askopenfilename(filetypes=[(\"Excel files\", \"*.xlsx *.xls\")])\n",
+    "\n",
+    "    # Read both GHA files\n",
+    "    gha_df1 = pd.read_excel(gha_file_1)\n",
+    "    gha_df2 = pd.read_excel(gha_file_2)\n",
+    "\n",
+    "    # Combine them\n",
+    "    combined_gha_df = pd.concat([gha_df1, gha_df2], ignore_index=True)\n",
+    "\n",
+    "    # Make sure PSID column exists\n",
+    "    if 'PSID' not in combined_gha_df.columns:\n",
+    "        print(\"Error: 'PSID' column not found in GHA files.\")\n",
+    "        input(\"Press Enter to exit...\")\n",
+    "        sys.exit()\n",
+    "\n",
+    "    combined_psids = combined_gha_df['PSID'].astype(str).unique()\n",
+    "\n",
+    "    # --- Step 2: Load Main Input File ---\n",
+    "    print(\"Select the MAIN INPUT file (from last phase)\")\n",
+    "    main_file = filedialog.askopenfilename(filetypes=[(\"Excel files\", \"*.xlsx *.xls\")])\n",
+    "    \n",
+    "    main_df = pd.read_excel(main_file)\n",
+    "\n",
+    "    if 'PSID' not in main_df.columns:\n",
+    "        print(f\"'PSID' column not found in main input file: {main_file}\")\n",
+    "        input(\"Press Enter to exit...\")\n",
+    "        sys.exit()\n",
+    "\n",
+    "    # Filter only rows where PSID is present in final GHA\n",
+    "    main_df['PSID'] = main_df['PSID'].astype(str)\n",
+    "    filtered_main_df = main_df[main_df['PSID'].isin(combined_psids)].copy()\n",
+    "\n",
+    "    print(f\"Filtered rows: {len(main_df) - len(filtered_main_df)} rows removed.\")\n",
+    "    \n",
+    "    # OPTIONAL: Save filtered result to a temp file for next steps\n",
+    "    output_path = filedialog.asksaveasfilename(defaultextension=\".xlsx\", title=\"Save Filtered Main Input File\")\n",
+    "    filtered_main_df.to_excel(output_path, index=False)\n",
+    "    print(f\"Filtered file saved at: {output_path}\")\n",
+    "\n",
+    "except Exception as e:\n",
+    "    print(\"An error occurred:\", str(e))\n",
+    "    input(\"Press Enter to exit...\")\n",
+    "    sys.exit()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "93bac6b5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "main input file for this phase is somewhat simplar to what we produced in last phase... as few new columns or some information given in that file will be changes my multiple ppl... after that we need to process that file. ok so thats the input file. \n",
+    "delete all the psid lines which are not in the latest gha file for the gha file we have to combine the two ghas that will be selected by the user in the beginning of the file .\n",
+    "\n",
+    "\n",
+    "There are 5 input files one is the main input file which we created in the last phase and the second file is the combination of 2 GHA files that the user will select in the starting of the program and then we have to combine both of them one after another and then it will become a final GHA file that we will refer to. Third is the cognos report, that again user will select in the beginning of the code.  Fourth is the last month billing file. Fifth is the ospd file , which will be in .xlsb format(load only CC-List sheet and columns from that:  CC_ID, LE_Description.\n",
+    "1. delete all those rows from main input file where psid is not present in final gha file.\n",
+    "2. Refresh all columns data from column e to column Z in main input file basis the PSID from the final gha file.\n",
+    "3. in the main input file , update AID column values, fetch AVP, Manager Operations from cognos report based on Cost center of main input file with Cost Code column in cognos report.\n",
+    "4. Create a copy of the  column ‘Billed/Not Billed’ And  name this new column In main input file as ‘Category for Static’. We have to update the values of this column as follows:\n",
+    "\ta). if column Employee Class is either ‘Intern’ or ‘External’ and Billed/Not Billed is ‘Not billed’ then ‘Category for Static’  should be set to ‘Others’\n",
+    "\tb).if column ‘GCB Grade’ is ‘3’ or ‘MD’ and column ‘Billed/Not Billed’ is ‘Not billed’ then ‘Category for Static’  should be set to ‘Others’.\n",
+    "c). if column ‘GFOC Country’= ‘Electronic Data Process Mexico’ and column ‘Billing Entity’ =’GR_MX_Electronic Data Process Mexico, S.A de C.V.’  and columm ‘Billed/Not Billed’=’Billed’ then ‘Category for Static’  should be set to ‘Not Billed’.  Simialr to this we have 4 more pairs to be checked for true and in all these cases we have to update ‘Category for Static’  should be set to ‘Not Billed’.  \n",
+    "5. from main input file column ‘Business Partner Cost Center’ column remove ‘-‘ and any preceding zeroes. And then concatenate the resultant col values with ‘Billing Entity’ col values. Similar operation should be performed in last month billing file also (which will be uploaded by the user in the beginning of the program.  After concatenation do a lookup based onthese columns and find any new concatenated values which is not present in last month billing file. If any records are found then : update the Comment column (create Comment column if does not exist) with the comment : business partner Cost center and billing entity not found in last month file (or any better comment to state this situation). \n",
+    "6. add a new column to main input file AS ‘Billing Entity name as per OSPD. For this based on ‘Business Partner Cost Center’ in main input file, fetch LE_Description col values from ospd basis CC_ID column of ospd file. \n",
+    "7. now fetch all unique pairs of ‘Business Partner Cost Center’ and Billing Entity. Make sure that each ‘Business Partner Cost Center’ corresponds to only one Billing Entity value. If and ‘Business Partner Cost Center’ has more that one billing entity against it, then add comment ‘multiple billing entities found.’  If already there is a comment against this row, we can add a new column comment2 and then add comment2 to it. (as I need to keep all comments). Only multiple billing enities are legit where cost center starts with’9’.  Anyways we still need to comment, but this time add… biling cost center begins with digit 9.  Make sure ‘Business Partner Cost Center’  is of simple text type at the end. \n",
+    "8. ‘Billing Contact PSID’ column in main input file should be 0f 8 digts, prefix 0 if needed (excluding entries where its IPAC. \n",
+    "9. Each’ Billing Contact name should have exactly one billing contact PSID against it.  Add comments to those where more than one psid is found. Comment as “billing contact has duplicate names” . Here point to be noted is that there are chances that the values in the column Billing Contact name has email id mentioned in some of the rows and in some rows it’s the actual name, we shall write a code to identify  if a billing contact psid has more than one billin contact name values then try to identify if that email is of same person or not, as there are 90% chances that email will contain alteast one word from the name for example John Scena is the name, and inother row with same billing contact psid the name is Scena.J@abcs.com... Then we should be able to figure out that these \n",
+    "\n",
+    "\n",
+    " \n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "9b3f1200",
    "metadata": {},
    "outputs": [],
