--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,7 +3,102 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4ffb0ad6",
+   "id": "da3fcbea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def reposition_psid_and_position_id(df: pd.DataFrame) -> pd.DataFrame:\n",
+    "    \"\"\"\n",
+    "    Repositions 'PSID' column to column D (index 3) and 'Position ID' to column E (index 4).\n",
+    "    \n",
+    "    Parameters:\n",
+    "    - df: DataFrame where 'PSID' and 'Position ID' columns exist.\n",
+    "\n",
+    "    Returns:\n",
+    "    - Modified DataFrame with swapped column positions.\n",
+    "    \"\"\"\n",
+    "    try:\n",
+    "        cols = df.columns.tolist()\n",
+    "\n",
+    "        if 'PSID' not in cols or 'Position ID' not in cols:\n",
+    "            raise ValueError(\"Both 'PSID' and 'Position ID' must be present in the dataframe.\")\n",
+    "\n",
+    "        # Remove them from the list\n",
+    "        cols.remove('PSID')\n",
+    "        cols.remove('Position ID')\n",
+    "\n",
+    "        # Insert at desired positions\n",
+    "        cols.insert(3, 'PSID')         # Column D = index 3\n",
+    "        cols.insert(4, 'Position ID')  # Column E = index 4\n",
+    "\n",
+    "        df = df[cols]\n",
+    "        print(\"✅ Successfully repositioned 'PSID' to column D and 'Position ID' to column E.\")\n",
+    "        return df\n",
+    "\n",
+    "    except Exception as e:\n",
+    "        print(\"❌ Error while repositioning columns:\", e)\n",
+    "        raise\n",
+    "        \n",
+    "        \n",
+    "def refresh_columns_e_to_z(main_df: pd.DataFrame, gha_df: pd.DataFrame) -> pd.DataFrame:\n",
+    "    \"\"\"\n",
+    "    Refreshes columns E to Z in main_df using the latest data from gha_df based on PSID.\n",
+    "\n",
+    "    Parameters:\n",
+    "    - main_df: DataFrame containing the main input file (already filtered on PSID).\n",
+    "    - gha_df: DataFrame of the combined GHA file.\n",
+    "\n",
+    "    Returns:\n",
+    "    - Updated main_df with refreshed columns E to Z.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    import string\n",
+    "\n",
+    "    try:\n",
+    "        # Get actual column names for Excel columns E to Z\n",
+    "        all_columns = main_df.columns.tolist()\n",
+    "        start_col = 4  # Column E is index 4\n",
+    "        end_col = 25   # Column Z is index 25 (inclusive)\n",
+    "\n",
+    "        if len(all_columns) < end_col + 1:\n",
+    "            raise ValueError(\"Main input file does not have enough columns to cover E to Z (25 columns).\")\n",
+    "\n",
+    "        cols_to_refresh = all_columns[start_col:end_col + 1]\n",
+    "\n",
+    "        # Ensure PSID is in both dataframes\n",
+    "        if 'PSID' not in main_df.columns or 'PSID' not in gha_df.columns:\n",
+    "            raise KeyError(\"'PSID' column must exist in both main_df and gha_df.\")\n",
+    "\n",
+    "        # Prepare gha_df with only PSID + the refresh columns (ensure those columns exist in GHA)\n",
+    "        missing_cols = [col for col in cols_to_refresh if col not in gha_df.columns]\n",
+    "        if missing_cols:\n",
+    "            raise ValueError(f\"The following columns to refresh are missing in GHA file: {', '.join(missing_cols)}\")\n",
+    "\n",
+    "        refresh_data = gha_df[['PSID'] + cols_to_refresh].drop_duplicates(subset='PSID')\n",
+    "\n",
+    "        # Merge on PSID to bring in new values\n",
+    "        main_df = main_df.drop(columns=cols_to_refresh)\n",
+    "        main_df = main_df.merge(refresh_data, on='PSID', how='left')\n",
+    "\n",
+    "        print(f\"✅ Columns E to Z refreshed successfully.\")\n",
+    "        return main_df\n",
+    "\n",
+    "    except Exception as e:\n",
+    "        print(\"❌ Error while refreshing columns E to Z:\", e)\n",
+    "        raise\n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "main_df = reposition_psid_and_position_id(main_df)\n",
+    "main_df = refresh_columns_e_to_z(main_df, combined_gha_df)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "21d36a64",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93bac6b5",
+   "id": "69c99598",
    "metadata": {},
    "outputs": [],
    "source": [
