--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -2,8 +2,66 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "id": "c83b2e30",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Before refresh:\n",
+      "    PSID     Name      Entity Location\n",
+      "0   101    Alice  OldEntity1  OldLoc1\n",
+      "1   102      Bob  NewEntity2  NewLoc2\n",
+      "2   103  Charlie  OldEntity3  OldLoc3\n",
+      "3   104    David  OldEntity4  OldLoc4\n",
+      "\n",
+      "After refresh:\n",
+      "    PSID     Name      Entity Location\n",
+      "0   101    Alice  OldEntity1  OldLoc1\n",
+      "1   102      Bob  NewEntity2  NewLoc2\n",
+      "2   103  Charlie  NewEntity3  NewLoc3\n",
+      "3   104    David  NewEntity4  NewLoc4\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Load the before and after Excel files\n",
+    "df_before = pd.read_excel('before.xlsx')\n",
+    "df_after = pd.read_excel('after.xlsx')\n",
+    "\n",
+    "# Ensure both have same column order\n",
+    "df_after = df_after[df_before.columns]\n",
+    "\n",
+    "# Create a comparison DataFrame\n",
+    "comparison_df = df_before != df_after\n",
+    "\n",
+    "# Create a new DataFrame to store changes\n",
+    "changes = pd.DataFrame()\n",
+    "\n",
+    "# Iterate through columns and rows to collect differences\n",
+    "for col in df_before.columns:\n",
+    "    mask = comparison_df[col]\n",
+    "    if mask.any():\n",
+    "        for index in df_before[mask].index:\n",
+    "            changes = pd.concat([changes, pd.DataFrame({\n",
+    "                'Row': [index],\n",
+    "                'Column': [col],\n",
+    "                'Before': [df_before.at[index, col]],\n",
+    "                'After': [df_after.at[index, col]]\n",
+    "            })], ignore_index=True)\n",
+    "\n",
+    "# View changes\n",
+    "print(changes)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "da3fcbea",
+   "id": "0f4433cb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +156,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21d36a64",
+   "id": "195c9560",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "69c99598",
+   "id": "ff8ff7d0",
    "metadata": {},
    "outputs": [],
    "source": [
